Fix hitbox alignment for point and distributed loads
- Invert y-positioning logic in LoadMarker.java to correctly place hitboxes above/below the beam based on load magnitude sign.
- Update README.md to reflect the JavaFX project structure and build/run instructions.
- Minor cleanup and comments in BeamCanvas.java.